[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Menu/uiTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/Menu/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.760784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="ColorRect"]
margin_left = 192.0
margin_top = 192.0
margin_right = 333.0
margin_bottom = 235.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "RESUME"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="ColorRect"]
margin_left = 192.0
margin_top = 248.0
margin_right = 323.0
margin_bottom = 291.0
rect_scale = Vector2( 1, 0.989928 )
theme = ExtResource( 1 )
text = "QUIT TO MENU"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="ColorRect/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="ColorRect/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
